OO-5394: show warning if sub-selection of items have different scores